--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.css
@@ -1,10 +1,13 @@
-.box {
-    width: 500px;
-    margin: auto;
-    height: 450px;
-  }
-  
-  .bread-top {
+.BreadBottom {
+    height: 13%;
+    width: 80%;
+    background: linear-gradient(#F08E4A, #e27b36);
+    border-radius: 0 0 30px 30px;
+    box-shadow: inset -15px 0 #c15711;
+    margin: 2% auto;
+}
+
+.BreadTop {
     height: 20%;
     width: 80%;
     background: linear-gradient(#bc581e, #e27b36);
@@ -12,21 +15,21 @@
     box-shadow: inset -15px 0 #c15711;
     margin: 2% auto;
     position: relative;
-  }
-  
-  .seeds {
-    position: absolute;
+}
+
+.Seeds1 {
     width: 10%;
     height: 15%;
+    position: absolute;
     background-color: white;
     left: 30%;
     top: 50%;
     border-radius: 40%;
     transform: rotate(-20deg);
     box-shadow: inset -2px -3px #c9c9c9;
-  }
-  
-  .seeds:after {
+}
+
+.Seeds1:after {
     content: "";
     width: 100%;
     height: 100%;
@@ -39,7 +42,7 @@
     box-shadow: inset -1px 2px #c9c9c9;
   }
   
-  .seeds:before {
+.Seeds1:before {
     content: "";
     width: 100%;
     height: 100%;
@@ -51,25 +54,25 @@
     transform: rotate(60deg);
     box-shadow: inset -1px -3px #c9c9c9;
   }
-  
-  .seeds2 {
-    position: absolute;
+
+  .Seeds2 {
     width: 10%;
     height: 15%;
+    position: absolute;
     background-color: white;
     left: 64%;
     top: 50%;
     border-radius: 40%;
     transform: rotate(10deg);
-    box-shadow: inset -3px -0 #c9c9c9;
+    box-shadow: inset -3px 0 #c9c9c9;
   }
   
-  .seeds2:after {
-    position: absolute;
+  .Seeds2:before {
+    content: "";
     width: 100%;
     height: 100%;
+    position: absolute;
     background-color: white;
-    content: "";
     left: 150%;
     top: -130%;
     border-radius: 40%;
@@ -77,42 +80,34 @@
     box-shadow: inset 1px 3px #c9c9c9;
   }
   
-  .salad {
-    width: 90%;
-    height: 7%;
-    background: linear-gradient(#228c1d, #91ce50);
+
+.Meat {
+    width: 80%;
+    height: 8%;
+    background: linear-gradient(#7f3608, #702e05);
     margin: 2% auto;
+    border-radius: 15px;
+}
+
+.Cheese {
+    width: 90%;
+    height: 4.5%;
+    margin: 2% auto;
+    background: linear-gradient(#f4d004, #d6bb22);
     border-radius: 20px;
-  }
-  
-  .bacon {
+}
+
+.Salad {
+    width: 85%;
+    height: 7%;
+    margin: 2% auto;
+    background: linear-gradient(#228c1d, #91ce50);
+    border-radius: 20px;
+}
+
+.Bacon {
     width: 80%;
     height: 3%;
     background: linear-gradient(#bf3813, #c45e38);
     margin: 2% auto;
-  }
-  
-  .cheese {
-    width: 91%;
-    height: 4.5%;
-    background: linear-gradient(#f4d004, #d6bb22);
-    border-radius: 20px;
-    margin: 2% auto;
-  }
-  
-  .meat {
-    width: 82%;
-    height: 8%;
-    background: linear-gradient(#7f3608, #702e05);
-    border-radius: 15px;
-    margin: 2% auto;
-  }
-  
-  .bread-bottom {
-    height: 13%;
-    width: 80%;
-    background: linear-gradient(#f08e4a, #e27b36);
-    margin: 2% auto;
-    box-shadow: inset -15px 0 #c15711;
-    border-radius: 0 0 30px 30px;
-  }
+}
