--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -1,6 +1,6 @@
 .BuildControls{
 width: 60%;
-background-color: antiquewhite;
+background-color: #aed581;
 display: flex;
 flex-flow: column;
 align-items: center;
