--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
+}
+main{
+  margin: 0%;
+  background-image: url("./assets/burger_zinger_web_hero.jpg");
+    background-repeat: repeat-y;
 }
